# legal-ai-desktop

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: download-llama-server.sh  download-ocr-tools.sh  download-ollama.sh  generate-icon.py
src/: App.tsx
src-tauri/: Cargo.toml  ironclaw-embedded.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/ironclaw/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  SECURITY.md  ironclaw.yaml
src-tauri/ironclaw/config/: ironclaw.yaml
src-tauri/ironclaw/docs/: SECURITY_AUDIT.md  THREAT_MODEL.md
src-tauri/ironclaw/src/: lib.rs  main.rs
src-tauri/ironclaw/src/agents/: mod.rs
src-tauri/ironclaw/src/antitheft/: mod.rs
src-tauri/ironclaw/src/auth/: mod.rs
src-tauri/ironclaw/src/channels/: mod.rs
src-tauri/ironclaw/src/cli/: audit.rs  doctor.rs  mod.rs  models.rs  onboard.rs  policy.rs  skills.rs
src-tauri/ironclaw/src/core/: cache.rs  chunking.rs  config.rs  cost.rs  engine.rs  history.rs  mod.rs  multimodal.rs  scheduler.rs  tool.rs  types.rs
src-tauri/ironclaw/src/dlp/: mod.rs
src-tauri/ironclaw/src/gateway/: mod.rs
src-tauri/ironclaw/src/guardian/: mod.rs
src-tauri/ironclaw/src/memory/: mod.rs
src-tauri/ironclaw/src/network/: mod.rs
src-tauri/ironclaw/src/observability/: mod.rs
src-tauri/ironclaw/src/plugins/: mod.rs
src-tauri/ironclaw/src/providers/: mod.rs
src-tauri/ironclaw/src/rbac/: mod.rs
src-tauri/ironclaw/src/sandbox/: mod.rs  profiles.rs
src-tauri/ironclaw/src/security/: mod.rs
src-tauri/ironclaw/src/skills/: community.rs  mod.rs  scanner.rs
src-tauri/ironclaw/src/tools/: db.rs  legal.rs  mod.rs  watcher.rs
src-tauri/ironclaw/src/tunnel/: mod.rs
src-tauri/ironclaw/src/ui/: mod.rs
src-tauri/ironclaw/src/workflow/: mod.rs
src-tauri/ironclaw/tests/: security_tests.rs
src-tauri/nsis/: uninstall-hooks.nsi
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts
src/pages/: Chat.tsx  Clients.tsx  Dashboard.tsx  Documents.tsx  InboxPage.tsx  Matters.tsx  SettingsPage.tsx  Setup.tsx
