[package]
name = "legal-ai-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "legal_ai_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "legal-ai-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
ironclaw = { path = "ironclaw" }
reqwest = { version = "0.12", features = ["json"] }
pdf-extract = "0.7"
docx-rs = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
libc = "0.2"
which = "8.0.2"
